--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13"
   },
