--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
