--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.7.9",
     "components": "^0.1.0",
     "dotenv": "^16.4.7",
@@ -23,8 +24,9 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "styled": "^1.0.0",
-    "styled-components": "^6.1.13",
-    "swiper": "^11.2.1"
+    "styled-components": "^6.1.18",
+    "swiper": "^11.2.1",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -36,6 +38,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^6.3.5"
   }
 }
