--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.7.9",
     "components": "^0.1.0",
     "dotenv": "^16.4.7",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -24,7 +27,8 @@
     "redux-persist": "^6.0.0",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -36,6 +40,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "vite": "^5.4.10"
+    "vite": "^6.3.5"
   }
 }
