--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.7.9",
     "components": "^0.1.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
@@ -35,11 +37,13 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "buffer": "^6.0.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "process": "^0.11.10",
     "vite": "^6.3.5"
   }
 }
