--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
