--- a/package.json
+++ b/package.json
@@ -30,21 +30,24 @@
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.1",
-    "tailwindcss": "^4.1.7",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.21",
     "buffer": "^6.0.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.5.4",
     "process": "^0.11.10",
+    "tailwindcss": "^4.1.8",
     "vite": "^6.3.5"
   }
 }
